public/assets/stylesheet/style.css
body {
  margin: 0px;
  /* font-family: Arial, Helvetica, sans-serif; */
  font-family: GDS Transport, Arial, sans-serif;
}

.pagination {
  /* display: grid;
  grid-template-columns: auto auto; */
  padding: 10px 0px;
  margin-top: 20px;
}

/* .pagination .col.middle{
    display: inline-flex; 
    justify-content: right;
    text-align: right;
    margin: 10px 0px; 
} */

.pagination .col.last {
  display: flex;
  justify-content: flex-end;
  text-align: right;
  /* margin: 10px 10px; */
  /* float : right; */
  left: 200;
}

.pagination p {
  margin: 10px 0px;
}

.pagination a {
  border: solid 1px #ffffff;
  /* padding: 8px 10px; */
  text-decoration: none;
  padding: 8px;
  /* color:rgb(22, 10, 134); */
  color: #1d70b8;
}

.pagination a:nth-child(1),
.pagination a:last-child {
  padding: 8px 0;
}
.pagination a:hover {
  color: rgb(86, 148, 202);
}
.pagination a.active {
  /* background-color: rgb(229, 235, 236); */
  text-decoration: none;
  color: black;
}
.govuk-font-bold {
  font-weight: bold;
}
.pagination span:nth-child(3) {
  font-weight: bold;
}
.govuk-subsidyresult label {
  font-weight: bold;
  min-width: 10%;
  float: left;
  margin-right: 1%;
}
.govuk-subsidyresult {
  display: flex;
  align-items: center;
  margin-bottom: 1%;
}
.govuk-subsidyresult span {
  max-width: 70%;
  float: left;
}
.govuk-border-bottom {
  border-bottom: 1px solid lightgray;
  padding-bottom: 2%;
  margin-bottom: 2%;
}
.govuk-bold {
  font-weight: bold;
}
a {
  color: #005da6;
}
.previous {
  background-color: #ffffff;
  color: black;
}
.govuk-display-flex {
  display: flex;
  align-items: center;
  text-align: right;
  justify-content: flex-end;
}
.govuk-display-flex form {
  padding: 0;
}
.govuk-display-flex form select {
  width: 100%;
}

@media only screen and (max-width: 450px) {
  .pagination a {
    padding: 12px 6px;
  }
  #pagination1 .govuk-display-flex {
    display: block;
  }
}

.td-overflow-format {
  max-width: 190px; 
  overflow: hidden; 
  text-overflow: ellipsis;
  white-space: nowrap;
}

.new-grid-width {
  width: 1100px;
  margin-left: -65px;
  margin-top: 10px;
}

#filters-container .govuk-form-group{
  background-color:#f3f2f1;
  padding:1rem
}

#filters-container select{
  background-color:#ffffff;
  width: 100%;
}

#filters-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-bottom:1rem;
}

.filter-scroll-box {
  max-height: 150px;
  overflow-y: auto;
  border: 1px solid #b1b4b6;
  padding: 10px;
}

